--- a/package.json
+++ b/package.json
@@ -3,21 +3,24 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "cors": "^2.8.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "axios": "^0.21.1"
+    "react-router-dom": "^6.30.0"
   },
   "devDependencies": {
-    "typescript": "^4.1.3",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
-    "react-scripts": "4.0.3"
+    "@types/react-router-dom": "^5.3.3",
+    "react-scripts": "4.0.3",
+    "typescript": "^4.1.3"
   },
   "eslintConfig": {
     "extends": [
