--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "@types/react-dom": "^17.0.2",
     "@types/react-router-dom": "^5.3.3",
     "react-scripts": "4.0.3",
-    "typescript": "^4.1.3",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.4.17",
+    "typescript": "^4.1.3"
   },
   "eslintConfig": {
     "extends": [
