--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "react-router-dom": "^6.30.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^12.1.5",
+    "@types/jest": "^29.5.14",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
     "@types/react-router-dom": "^5.3.3",
